[tool.poetry]
name = "inspector"
version = "0.1.0"
description = "API for Inspecting HTTP Requests"
authors = ["Md Zubair Beg <inspector@zube.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
fastapi = {extras = ["all"], version = "^0.111.0"}
uvicorn = {extras = ["standard"], version = "^0.30.1"}
gunicorn = "^22.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
black = "^24.4.2"
mypy = "^1.10.1"
ruff = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
# https://beta.ruff.rs/docs/rules
extend-select = ["I", "N", "PT", "UP"]
target-version = "py312"

[tool.mypy]
ignore_missing_imports = true
